--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -2,41 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Dataset loaded successfully!\n"
+      "'wget' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
      ]
     }
    ],
    "source": [
-    "path =  'C:\\\\Users\\\\npachava\\\\Downloads\\\\Capstone\\\\Heartproject\\\\CDSS_Capstone-\\\\heart_disease_uci.csv'\n",
+    "!wget https://github.com/navyapachava/CDSS_Capstone-/blob/main/heart_disease_uci.csv\n",
     "\n",
-    "if os.path.exists(path):\n",
-    "    df = pd.read_csv(path)\n",
-    "    print('Dataset loaded successfully!')\n",
-    "else:\n",
-    "    print('File not found at the specified path.')\n"
+    "heart_disease_data = pd.read_csv('heart_disease_uci.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -201,18 +197,18 @@
        "4             normal    0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "heart_disease_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -246,72 +242,12 @@
     }
    ],
    "source": [
-    "df.info()"
+    "heart_disease_data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(np.int64(1), np.int64(920))"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['id'].min(),df['id'].max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(920, 16)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14720"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -322,35 +258,220 @@
        "sex           0\n",
        "dataset       0\n",
        "cp            0\n",
-       "num           0\n",
-       "restecg       2\n",
-       "chol         30\n",
-       "exang        55\n",
-       "thalch       55\n",
        "trestbps     59\n",
-       "oldpeak      62\n",
+       "chol         30\n",
        "fbs          90\n",
+       "restecg       2\n",
+       "thalch       55\n",
+       "exang        55\n",
+       "oldpeak      62\n",
        "slope       309\n",
-       "thal        486\n",
        "ca          611\n",
+       "thal        486\n",
+       "num           0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.isnull().sum().sort_values(ascending=True)"
+    "heart_disease_data.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>thalch</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>920.000000</td>\n",
+       "      <td>920.000000</td>\n",
+       "      <td>861.000000</td>\n",
+       "      <td>890.000000</td>\n",
+       "      <td>865.000000</td>\n",
+       "      <td>858.000000</td>\n",
+       "      <td>309.000000</td>\n",
+       "      <td>920.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>460.500000</td>\n",
+       "      <td>53.510870</td>\n",
+       "      <td>132.132404</td>\n",
+       "      <td>199.130337</td>\n",
+       "      <td>137.545665</td>\n",
+       "      <td>0.878788</td>\n",
+       "      <td>0.676375</td>\n",
+       "      <td>0.995652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>265.725422</td>\n",
+       "      <td>9.424685</td>\n",
+       "      <td>19.066070</td>\n",
+       "      <td>110.780810</td>\n",
+       "      <td>25.926276</td>\n",
+       "      <td>1.091226</td>\n",
+       "      <td>0.935653</td>\n",
+       "      <td>1.142693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>-2.600000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>230.750000</td>\n",
+       "      <td>47.000000</td>\n",
+       "      <td>120.000000</td>\n",
+       "      <td>175.000000</td>\n",
+       "      <td>120.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>460.500000</td>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>130.000000</td>\n",
+       "      <td>223.000000</td>\n",
+       "      <td>140.000000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>690.250000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>140.000000</td>\n",
+       "      <td>268.000000</td>\n",
+       "      <td>157.000000</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>920.000000</td>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>603.000000</td>\n",
+       "      <td>202.000000</td>\n",
+       "      <td>6.200000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               id         age    trestbps        chol      thalch     oldpeak  \\\n",
+       "count  920.000000  920.000000  861.000000  890.000000  865.000000  858.000000   \n",
+       "mean   460.500000   53.510870  132.132404  199.130337  137.545665    0.878788   \n",
+       "std    265.725422    9.424685   19.066070  110.780810   25.926276    1.091226   \n",
+       "min      1.000000   28.000000    0.000000    0.000000   60.000000   -2.600000   \n",
+       "25%    230.750000   47.000000  120.000000  175.000000  120.000000    0.000000   \n",
+       "50%    460.500000   54.000000  130.000000  223.000000  140.000000    0.500000   \n",
+       "75%    690.250000   60.000000  140.000000  268.000000  157.000000    1.500000   \n",
+       "max    920.000000   77.000000  200.000000  603.000000  202.000000    6.200000   \n",
+       "\n",
+       "               ca         num  \n",
+       "count  309.000000  920.000000  \n",
+       "mean     0.676375    0.995652  \n",
+       "std      0.935653    1.142693  \n",
+       "min      0.000000    0.000000  \n",
+       "25%      0.000000    0.000000  \n",
+       "50%      0.000000    1.000000  \n",
+       "75%      1.000000    2.000000  \n",
+       "max      3.000000    4.000000  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heart_disease_data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "chol\n",
+       "0.0      172\n",
+       "220.0     10\n",
+       "254.0     10\n",
+       "204.0      9\n",
+       "219.0      9\n",
+       "        ... \n",
+       "165.0      1\n",
+       "337.0      1\n",
+       "333.0      1\n",
+       "139.0      1\n",
+       "385.0      1\n",
+       "Name: count, Length: 217, dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heart_disease_data[\"chol\"].value_counts()"
+   ]
   }
  ],
  "metadata": {
